# iap-local-emulator

./: .gitignore  Dockerfile  LICENSE  build.sh  contributing.md  docker-compose.yml  iap-local-emulator.sln  pyproject.toml  readme.md  requirements.txt
config/: products.yaml
examples/dotnet/: IapEmulatorDemo.csproj  Program.cs  README.md
iap_emulator/: __init__.py  __main__.py  config.py  logging_config.py  main.py  middleware.py  state_logger.py
iap_emulator/api/: control.py  google_play.py
iap_emulator/models/: __init__.py  api_request.py  api_response.py  events.py  product.py  purchase.py  subscription.py
iap_emulator/repositories/: __init__.py  product_repository.py  purchase_store.py  subscription_store.py
iap_emulator/services/: event_dispatcher.py  purchase_manager.py  subscription_engine.py  time_controller.py
iap_emulator/utils/: __init__.py  billing_period.py  token_generator.py
tests/: __init__.py
tests/integration/: __init__.py  test_control_api.py  test_google_play_api.py  test_google_play_api_smoke.py  test_rtdn_events.py  test_subscription_lifecycle.py
tests/manual/: README.md  check_pubsub.py  rtdn_subscriber.py
tests/unit/: test_billing_period.py  test_config.py  test_emulator_behavior.py  test_event_dispatcher.py  test_logging.py  test_product_repository.py  test_pubsub_config.py  test_purchase_manager.py  test_purchase_store.py  test_state_logging.py  test_subscription_engine.py  test_subscription_store.py  test_time_controller.py  test_token_generator.py
